# StarShop-Contracts

./: Cargo.toml  Deployments.md  GUIDE_CONTRIBUTING.md  LICENSE  README.md  conduct-code.md  stellar_deployment_guide.md
StarShopContracts/implement-nft-contract/: Cargo.toml  README.md  SECURITY_AUDIT_REPORT.md
StarShopContracts/implement-nft-contract/src/: distribution.rs  lib.rs  metadata.rs  minting.rs  test.rs
StarShopContracts/implement-nft-contract/test_snapshots/test/: test_mint_invoice_nft.1.json  test_mint_reward_nft.1.json
StarShopContracts/promotional-boost-contract/: Cargo.toml  README.md
StarShopContracts/promotional-boost-contract/src/: lib.rs  payments.rs  slots.rs  test.rs  visibility.rs
StarShopContracts/promotional-boost-contract/test_snapshots/test/: test_atomic_transitions.1.json  test_audit_logging_through_events.1.json  test_basic_slot_purchase.1.json  test_boost_expiration.1.json  test_boost_expiration_cleanup_multiple_products.1.json  test_boost_renewal.1.json  test_boost_stacking_same_product.1.json  test_boosted_vs_non_boosted_sorting.1.json  test_concurrent_sellers_limited_slots.1.json  test_consistency_of_slot_metadata.1.json  test_debug_slot_limits.1.json  test_debug_slot_manager_state.1.json  test_debug_slot_replacement_step_by_step.1.json  test_edge_case_zero_duration.1.json  test_event_emission_comprehensive.1.json  test_expired_slots_cleanup.1.json  test_fairness_no_permanent_boosts.1.json  test_full_boost_lifecycle.1.json  test_minimal_slot_replacement_debug.1.json  test_multiple_categories_independent_slots.1.json  test_overlapping_boosts_different_categories.1.json  test_payment_refund_on_failed_boost.1.json  test_prevent_seller_boost_caps.1.json  test_refund_logic_on_replacement.1.json  test_seller_boost_limits_per_category.1.json  test_simple_slot_replacement.1.json  test_slot_count_tracking.1.json  test_slot_purchase_insufficient_payment.1.json  test_tiered_pricing.1.json  (+6 more)
(+399 files in other folders)
