[workspace]
members = [
    "StarShopContracts/ExampleContract",
    "StarShopContracts/ImplementNFTContract",
    "StarShopContracts/ImplementPaymentContract",
    "StarShopContracts/ProductFollowContract",
    "StarShopContracts/ProductVotingContract",
    
]

[workspace.dependencies]
soroban-sdk = "22.0.0-rc.3.2"