[package]
name = "implement-nft-contract"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "22.0.6" }

[dev-dependencies]
soroban-sdk = { version = "22.0.6", features = ["testutils"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2.10", features = ["custom"] }
